<resources>
    <string name="app_name">Detrasher</string>
    <string name="login_content">Login to the workspace</string>
    <string name="login_button_text">Log In</string>
    <string name="userID">vatsa</string>
    <string name="userPassword">srivatsa</string>
    <string name="manager_page_header">Manager Self Service</string>
    <string name="staff_page_header">Staff Self Service</string>
    <string name="profile_page_header">Manage your Profile</string>
    <string name="profile_password_page_header">Change your password</string>
    <string name="task_assign_header">Assigned Tasks</string>
    <string name="trash_manager_header">Trash Level Manager</string>
    <string name="trash_task_assign_header">Manage Trash</string>
    <string name="trash_task_complete_header">Worklist Item</string>
    <string name="workforce_header">Workforce Admin</string>

    <string name="username_label">User Name</string>
    <string name="userfullname_label">Full Name</string>
    <string name="user_old_password_label">Old Password</string>
    <string name="user_new_password_label">New Password</string>
    <string name="user_confirm_password_label">Confirm Password</string>
    <string name="user_role_descr_lable">Role</string>

    <string name="trash_loc_label">Location</string>
    <string name="trash_id_label">Trash Can No. </string>
    <string name="trash_level_label">Current Trash Level</string>

    <string name="task_loc_label">Location</string>
    <string name="task_assigned_to_label">Assigned to</string>
    <string name="task_trash_level_label">Current Trash Level</string>

    <string name="user_name_value">Default User Name</string>
    <string name="user_old_password_hint"><font size="15">Old Password</font></string>
    <string name="user_new_password_hint"><font size="15">New Password</font></string>
    <string name="user_confirm_password_hint"><font size="15">Confirm Password</font></string>

    <string name="change_password_button_txt">Change Password</string>
    <string name="assign_task_button_txt">Assign Task</string>
    <string name="complete_task_button_txt">Mark Task Complete</string>
    <string name="title_activity_maps">Map</string>

    <string name="assign_task_to">Assign Task to</string>
</resources>
